--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       bottom: 0;
       margin: 0;
       padding: 0;
-      background: #191432;
+      background: #14121F;
       font-family: 'lalezar';
     }
 
@@ -160,7 +160,7 @@
       height: 1080,
       parent: 'phaser-game',
       antialias: true,
-      transparent: false,
+      transparent: true,
       scale: {
         mode: Phaser.Scale.FIT,
         autoCenter: Phaser.Scale.CENTER_BOTH
